[gd_scene load_steps=7 format=2]

[ext_resource path="res://textures/Items and HUD.png" type="Texture" id=1]
[ext_resource path="res://items/WeaponHolyWater.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 4 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 9, 8 )

[sub_resource type="Animation" id=3]
resource_name = "Burning"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21, 22, 18, 19, 20, 21, 22 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -4 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "_applyHits"
}, {
"args": [  ],
"method": "_applyHits"
}, {
"args": [  ],
"method": "_applyHits"
}, {
"args": [  ],
"method": "_applyHits"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[node name="WeaponHolyWater" type="RigidBody2D"]
collision_layer = 4
mode = 2
gravity_scale = 4.0
continuous_cd = 1
contacts_reported = 1
contact_monitor = true
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -4 )
texture = ExtResource( 1 )
hframes = 9
vframes = 6
frame = 21

[node name="PhysicsShape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8

[node name="DamageShape" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="BurningShape" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -4 )
shape = SubResource( 4 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Burning = SubResource( 3 )
anims/Idle = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_WeaponHolyWater_body_entered"]
[connection signal="tree_entered" from="." to="." method="_on_WeaponHolyWater_tree_entered"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
